[project]
name = "telegrafbacnet"
description = "BACnet input execd plugin for Telegraf"
version = "1.0.1"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "bacpypes >= 0.18.6",
    # "tomlconfig @ git+https://github.com/JurajMarcin/tomlconfig.git@1.1.2",
]

[project.scripts]
telegrafbacnet = "telegrafbacnet:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["telegrafbacnet"]
